--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <link rel="stylesheet" href="assets/css/backgrid.css">
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css" media="screen"/>
 
+    <style>#preloader{position:absolute;top:50%;left:25%;width:45%;text-align:center}</style>
+
     <!-- scripts -->
    	<script data-main="assets/js/main.js" src="assets/js/libs/requirejs.js"></script>
+    <script>
+      requirejs.onResourceLoad = function (context, map, depArray){
+        var element = document.getElementById('log');
+        if (element) element.innerHTML = map.name.replace('-', ' ');
+      };
+    </script>    
 
 
     <!-- templates -->
@@ -83,7 +91,9 @@
 </head>
 <body>
 
-    <div id="main"></div>
+    <div id="main">
+        <div id="preloader"><div id="log"></div></div>
+    </div>
 
 </body>
 </html>
